2006-01-26  Phil Muldoon  <pmuldoon@redhat.com>

	* FryskGui.java (mainGui): Use errorDialog instead of
	warnDialog.

2006-01-26  Adam Jocksch  <ajocksch@redhat.com>

	* FryskGui.java (mainGui): Now passes in "Frysk Monitor/Debugger" as
	the tooltip to the tray icon.

	* FryskGui.java (main): Forgot to remove one relative path, fixed.
	* FryskGui.java (main): No longer includes relative paths on image
	search path.

2006-01-25  Adam Jocksch  <ajocksch@redhat.com>

	* FryskGui.java (mainGui): Now takes paths for image, message bungle,
	and test files as well as for glade files; Also initializes the paths
	in Messages and SourceWindowFactory.
	(main): Now passes in paths for image, message bundle, and test files.
	* glade/frysk_source.glade: Made the trace viewer display headers.

2006-01-25  Phil Muldoon  <pmuldoon@redhat.com>

	* FryskGui.java (mainGui): Wrapped event loop in catch.

2006-01-24  Sami Wagiaalla  <swagiaal@redhat.com>

	* test/TestObserverSaveLoad.java (testExport): Added test
	for exporting and importing saved Observers.

2006-01-23  Rick Moseley  <rmoseley@redhat.com>

	* Delete the images/__MACOSX/icon/._.DS_Store file.

2006-01-18  Rick Moseley  <rmoseley@redhat.com>

	* Added frysk.desktop here.
	* frysk.desktop: changed icon name to fryskTrayIcon48.png.

2006-01-16  Rick Moseley  <rmoseley@redhat.com>

	* Actually add the icons this time.

2006-01-13  Rick Moseley  <rmoseley@redhat.com>

	* Added images/48 directory.
	* Added images/xx/fryskTrayIconxx.png files for startup sequence.

2006-01-12  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source.glade: removed requires gnome tag.

2005-12-20  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source_prefs.glade: Added area for the number of inlined
	scopes to display under the settings tab.

2005-12-19  Adam Jocksch  <ajocksch@redhat.com>

	* FryskGui.java (mainGui): Now uses refactored TrayIcon constructor.

2005-12-15  Adam Jocksch  <ajocksch@redhat.com>
